components/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-api-system
  hostnames:
    - "longhorn.production.k8s.evoteum.com"
    - "longhorn.evoteum.com"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
